<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.group10.fuzzyphotos.Activities.LogInActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite">


        <Button
            android:id="@+id/signUpButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="48dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="75dp"
            android:background="@drawable/rounded_button"
            android:enabled="true"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
            app:layout_constraintVertical_bias="0.2" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_text"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:selectAllOnFocus="true"
            app:layout_constraintBottom_toTopOf="@+id/passwordEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageLogIn" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:paddingLeft="10dp"
            android:background="@drawable/rounded_text"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

        <ImageView
            android:id="@+id/imageLogIn"
            android:layout_width="213dp"
            android:layout_height="150dp"
            android:layout_marginTop="35dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/fuzzy" />

        <TextView
            android:id="@+id/registerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/noAccount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpButton"
            tools:text="@string/noAccount" />

        <ProgressBar
            android:id="@+id/loginProgress"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/signUpButton"
            app:layout_constraintStart_toEndOf="@+id/signUpButton"
            app:layout_constraintTop_toTopOf="@+id/signUpButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>